<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/edtNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:ems="10"
        android:hint="@string/nombre"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtDescripcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/descripci_n"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@+id/edtNombre"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edtNombre"
        app:layout_constraintTop_toBottomOf="@+id/edtNombre" />

    <EditText
        android:id="@+id/edtEstado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/estado"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@+id/edtDescripcion"
        app:layout_constraintStart_toStartOf="@+id/edtDescripcion"
        app:layout_constraintTop_toBottomOf="@+id/edtDescripcion" />

    <EditText
        android:id="@+id/edtLon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/longitud"
        android:inputType="number|numberDecimal"
        app:layout_constraintEnd_toEndOf="@+id/edtLat"
        app:layout_constraintStart_toStartOf="@+id/edtLat"
        app:layout_constraintTop_toBottomOf="@+id/edtLat" />

    <EditText
        android:id="@+id/edtLat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:hint="@string/latitud"
        android:inputType="number|numberDecimal"
        app:layout_constraintEnd_toEndOf="@+id/edtEstado"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edtEstado"
        app:layout_constraintTop_toBottomOf="@+id/edtEstado" />

    <Button
        android:id="@+id/btnEnviar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/enviar"
        app:layout_constraintEnd_toEndOf="@+id/edtLon"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="@+id/edtLon"
        app:layout_constraintTop_toBottomOf="@+id/edtLon" />

    <Button
        android:id="@+id/btnVisualizar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/visualizar"
        app:layout_constraintEnd_toEndOf="@+id/btnEnviar"
        app:layout_constraintStart_toStartOf="@+id/btnEnviar"
        app:layout_constraintTop_toBottomOf="@+id/btnEnviar" />
</androidx.constraintlayout.widget.ConstraintLayout>